--- a/index.html
+++ b/index.html
@@ -271,6 +271,9 @@ document.addEventListener('DOMContentLoaded', () => {
       <img src="foto5.jpg">
       <p>🧡</p>
     </div>
+    <div class="polaroid">
+      <img src="foto6.jpg">
+      <p>💕</p>
   </div>
 </div>
 
