--- a/index.html
+++ b/index.html
@@ -187,6 +187,19 @@ button:hover {
   margin: 40px 0 10px 0;
   font-size: 13px;
 }
+/* BOTÃO LINK PERSONALIZADO */
+.block {
+  background: white;
+  padding: 25px;
+  margin: 25px auto;      /* centraliza horizontalmente */
+  border-radius: 25px;
+  box-shadow: 0 10px 15px rgba(0,0,0,0.05);
+  position: relative;
+  max-width: 400px;       /* largura do bloco, opcional */
+  text-align: center;     /* centraliza título, texto e botão */
+}
+
+
 </style>
 
 </head>
@@ -401,6 +414,13 @@ document.addEventListener('DOMContentLoaded', () => {
 <div class="footer">feito com muito carinho, eu te amo bibia</div>
 
 </div> <!-- container -->
+<!-- BLOCO DE LINK -->
+<div class="block">
+  <h2>🌟 secret</h2>
+  <p>oq sera isso???</p>
+  <button onclick="window.open('https://oppzp.github.io/cartinha-de-um-mes/', '_blank')">clique em mim pfvvv</button>
+</div>
+
 
 <script>
 /* FRASES */
